[gd_scene load_steps=3 format=3 uid="uid://c8k2m5n7p9q1r"]

[ext_resource type="Script" path="res://scripts/screens/TutorialScreen.gd" id="1"]
[ext_resource type="Theme" uid="uid://dv8rowrpphj8g" path="res://themes/MobileTheme.tres" id="2"]

[node name="TutorialScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="ContentContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="ContentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "⚽ 축구 아카데미에 오신 것을 환영합니다"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MessageLabel" type="Label" parent="ContentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "3년 후, 프로가 될 수 있을까?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ContentContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="ContentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "훈련하고, 경기하고, 성장하세요.
156주간의 여정이 지금 시작됩니다."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer" type="Control" parent="ContentContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="NextButton" type="Button" parent="ContentContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "시작하기 ▶"

[node name="SkipButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 180.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 20
text = "건너뛰기"

[node name="StepIndicator" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Step 1 / 4"
horizontal_alignment = 1
