extends Control
## TutorialScreen - 3-Minute Onboarding Flow
## P0 Implementation: Tutorial â†’ Train â†’ Match â†’ Results â†’ Complete

signal tutorial_completed

# UI References
@onready var title_label: Label = $ContentContainer/TitleLabel
@onready var message_label: Label = $ContentContainer/MessageLabel
@onready var description_label: Label = $ContentContainer/DescriptionLabel
@onready var next_button: Button = $ContentContainer/NextButton
@onready var skip_button: Button = $SkipButton
@onready var step_indicator: Label = $StepIndicator

# Tutorial State
enum TutorialStep { WELCOME, TRAINING_INTRO, TRAINING_RESULT, MATCH_INTRO, MATCH_RESULT, COMPLETE }

var current_step: TutorialStep = TutorialStep.WELCOME
var training_result: Dictionary = {}
var match_result: Dictionary = {}


func _ready():
	print("[TutorialScreen] Starting 3-minute tutorial flow")
	Input.set_mouse_mode(Input.MOUSE_MODE_VISIBLE)

	# Connect buttons
	if next_button:
		next_button.disabled = false
		next_button.focus_mode = Control.FOCUS_ALL
		next_button.mouse_filter = Control.MOUSE_FILTER_STOP
		next_button.pressed.connect(_on_next_pressed)
		next_button.grab_focus()
	if skip_button:
		skip_button.disabled = false
		skip_button.focus_mode = Control.FOCUS_ALL
		skip_button.mouse_filter = Control.MOUSE_FILTER_STOP
		skip_button.pressed.connect(_on_skip_pressed)

	# Show welcome step
	_show_step(TutorialStep.WELCOME)


func _show_step(step: TutorialStep):
	"""Display content for current tutorial step"""
	current_step = step

	match step:
		TutorialStep.WELCOME:
			_show_welcome()

		TutorialStep.TRAINING_INTRO:
			_show_training_intro()

		TutorialStep.TRAINING_RESULT:
			_show_training_result()

		TutorialStep.MATCH_INTRO:
			_show_match_intro()

		TutorialStep.MATCH_RESULT:
			_show_match_result()

		TutorialStep.COMPLETE:
			_show_complete()


func _show_welcome():
	"""Step 1: Welcome message"""
	title_label.text = "âš½ ì¶•êµ¬ ì•„ì¹´ë°ë¯¸ì— ì˜¤ì‹  ê²ƒì„ í™˜ì˜í•©ë‹ˆë‹¤"
	message_label.text = "3ë…„ í›„, í”„ë¡œê°€ ë  ìˆ˜ ìˆì„ê¹Œ?"
	description_label.text = """í›ˆë ¨í•˜ê³ , ê²½ê¸°í•˜ê³ , ì„±ì¥í•˜ì„¸ìš”.
156ì£¼ê°„ì˜ ì—¬ì •ì´ ì§€ê¸ˆ ì‹œì‘ë©ë‹ˆë‹¤."""

	next_button.text = "ì‹œì‘í•˜ê¸° â–¶"
	step_indicator.text = "Step 1 / 4"

	print("[TutorialScreen] Welcome step displayed")


func _show_training_intro():
	"""Step 2: Training introduction"""
	title_label.text = "ğŸ’ª í›ˆë ¨ìœ¼ë¡œ ì‹¤ë ¥ì„ í‚¤ìš°ì„¸ìš”"
	message_label.text = "ë§¤ì£¼ í›ˆë ¨ ì¢…ë¥˜ë¥¼ ì„ íƒí•  ìˆ˜ ìˆìŠµë‹ˆë‹¤"
	description_label.text = """ê¸°ìˆ  í›ˆë ¨: ìŠˆíŒ…, íŒ¨ìŠ¤, ë“œë¦¬ë¸” í–¥ìƒ
ì²´ë ¥ í›ˆë ¨: ìŠ¤í”¼ë“œ, ìŠ¤íƒœë¯¸ë‚˜ í–¥ìƒ
ë©˜íƒˆ í›ˆë ¨: ì§‘ì¤‘ë ¥, ì¹¨ì°©ì„± í–¥ìƒ
ì „ìˆ  í›ˆë ¨: í¬ì§€ì…”ë‹, íŒë‹¨ë ¥ í–¥ìƒ

ì²« í›ˆë ¨ì„ ì‹œì‘í•´ë³¼ê¹Œìš”?"""

	next_button.text = "ê¸°ìˆ  í›ˆë ¨ ì‹œì‘ â–¶"
	step_indicator.text = "Step 2 / 4"

	print("[TutorialScreen] Training intro displayed")


func _show_training_result():
	"""Step 3: Show training results"""
	title_label.text = "âœ… í›ˆë ¨ ì™„ë£Œ!"
	message_label.text = "ëŠ¥ë ¥ì¹˜ê°€ í–¥ìƒë˜ì—ˆìŠµë‹ˆë‹¤"

	var ca_gain = training_result.get("ca_gain", 2)
	var stats_text = "ê¸°ìˆ  ëŠ¥ë ¥ +%d\ní”¼ë¡œë„ +10" % ca_gain

	description_label.text = (
		"""í›Œë¥­í•´ìš”! ì²« í›ˆë ¨ì„ ë§ˆì³¤ìŠµë‹ˆë‹¤.

%s

ë§¤ì£¼ í›ˆë ¨ì„ í†µí•´ ê¾¸ì¤€íˆ ì„±ì¥í•  ìˆ˜ ìˆìŠµë‹ˆë‹¤.
ì´ì œ ì²« ê²½ê¸°ë¥¼ ì¤€ë¹„í•´ë³¼ê¹Œìš”?"""
		% stats_text
	)

	next_button.text = "ê²½ê¸° ì¤€ë¹„ â–¶"
	step_indicator.text = "Step 3 / 4"

	print("[TutorialScreen] Training result displayed (CA +%d)" % ca_gain)


func _show_match_intro():
	"""Step 4: Match introduction"""
	title_label.text = "âš½ ê²½ê¸°ì— ì¶œì „í•˜ì„¸ìš”"
	message_label.text = "ì‹¤ì „ì—ì„œ ì‹¤ë ¥ì„ ë°œíœ˜í•  ì°¨ë¡€ì…ë‹ˆë‹¤"
	description_label.text = """ë§¤ì£¼ 1-2ë²ˆì˜ ê²½ê¸°ê°€ ìˆìŠµë‹ˆë‹¤.
ì¢‹ì€ í™œì•½ì„ í¼ì¹ ìˆ˜ë¡ ëŠ¥ë ¥ì¹˜ê°€ ë” ë¹¨ë¦¬ ì„±ì¥í•©ë‹ˆë‹¤.

í‰ì  6.0 ì´ìƒ: ë³´í†µ
í‰ì  7.0 ì´ìƒ: ì¢‹ìŒ
í‰ì  8.0 ì´ìƒ: í›Œë¥­í•¨

ì²« ê²½ê¸°ë¥¼ ì‹œì‘í•´ë³¼ê¹Œìš”?"""

	next_button.text = "ê²½ê¸° ì‹œì‘ â–¶"
	step_indicator.text = "Step 4 / 4"

	print("[TutorialScreen] Match intro displayed")


func _show_match_result():
	"""Step 5: Show match results"""
	title_label.text = "ğŸ‰ ì²« ê²½ê¸° ì™„ë£Œ!"

	var score = match_result.get("final_score", [1, 0])
	var rating = match_result.get("player_rating", 7.0)
	var result = match_result.get("result", "ìŠ¹ë¦¬")

	var result_icon = "ğŸ†" if result == "ìŠ¹ë¦¬" else ("ğŸ¤" if result == "ë¬´ìŠ¹ë¶€" else "âŒ")

	message_label.text = "%s %s (í‰ì  %.1f)" % [result_icon, result, rating]

	description_label.text = (
		"""ê²½ê¸° ê²°ê³¼: %d - %d
ê°œì¸ í‰ì : %.1f / 10.0

í›Œë¥­í•œ ì¶œë°œì´ì—ìš”!
ì´ì œ ë³¸ê²©ì ì¸ 3ë…„ ì—¬ì •ì„ ì‹œì‘í•  ì¤€ë¹„ê°€ ë˜ì—ˆìŠµë‹ˆë‹¤.

ë§¤ì£¼ í›ˆë ¨í•˜ê³  ê²½ê¸°í•˜ë©° í”„ë¡œ ì„ ìˆ˜ë¥¼ ëª©í‘œë¡œ ì„±ì¥í•˜ì„¸ìš”!"""
		% [score[0], score[1], rating]
	)

	next_button.text = "ì—¬ì • ì‹œì‘í•˜ê¸° â–¶"
	step_indicator.text = "íŠœí† ë¦¬ì–¼ ì™„ë£Œ"

	print("[TutorialScreen] Match result displayed (%s, %.1f rating)" % [result, rating])


func _show_complete():
	"""Step 6: Tutorial complete"""
	title_label.text = "ğŸ“ íŠœí† ë¦¬ì–¼ ì™„ë£Œ!"
	message_label.text = "ì´ì œ ë³¸ê²©ì ì¸ ì—¬ì •ì´ ì‹œì‘ë©ë‹ˆë‹¤"
	description_label.text = """156ì£¼ ë™ì•ˆ í›ˆë ¨í•˜ê³ , ê²½ê¸°í•˜ê³ , ì„±ì¥í•˜ì„¸ìš”.
3ë…„ í›„ ë‹¹ì‹ ì€ ì–´ë–¤ ì„ ìˆ˜ê°€ ë˜ì–´ ìˆì„ê¹Œìš”?

í–‰ìš´ì„ ë¹•ë‹ˆë‹¤! âš½"""

	next_button.text = "ì‹œì‘í•˜ê¸° â–¶"
	step_indicator.text = ""

	print("[TutorialScreen] Tutorial complete screen")


func _on_next_pressed():
	"""Handle next button press"""
	print("[TutorialScreen] Next pressed (current step: %d)" % current_step)

	match current_step:
		TutorialStep.WELCOME:
			_show_step(TutorialStep.TRAINING_INTRO)

		TutorialStep.TRAINING_INTRO:
			_execute_tutorial_training()

		TutorialStep.TRAINING_RESULT:
			_show_step(TutorialStep.MATCH_INTRO)

		TutorialStep.MATCH_INTRO:
			_execute_tutorial_match()

		TutorialStep.MATCH_RESULT:
			_show_step(TutorialStep.COMPLETE)

		TutorialStep.COMPLETE:
			_finish_tutorial()


func _execute_tutorial_training():
	"""Execute tutorial training (auto-select Technical)"""
	print("[TutorialScreen] Executing tutorial training (Technical)")

	# Call TrainingManager to execute training
	if not has_node("/root/TrainingManager"):
		push_error("[TutorialScreen] TrainingManager not found!")
		training_result = {"ca_gain": 2, "fatigue_cost": 10}
		_show_step(TutorialStep.TRAINING_RESULT)
		return

	var training_manager: Node = get_node("/root/TrainingManager")

	# Use base technical program for onboarding (shooting focus)
	var training_id := "shooting"
	var result: Dictionary = training_manager.execute_training(training_id, false)
	var success: bool = result.get("success", false)

	if success:
		var changes_dict: Dictionary = {}
		var changes_variant: Variant = result.get("changes", {})
		if changes_variant is Dictionary:
			changes_dict = changes_variant
		var ca_gain: int = 0
		for change_value_local in changes_dict.values():
			var change_value: int = int(change_value_local)
			ca_gain += change_value
		training_result = {
			"ca_gain": ca_gain,
			"fatigue_cost": float(result.get("condition_cost", 0.0)),
			"changes": changes_dict,
			"message": String(result.get("message", ""))
		}
		print("[TutorialScreen] Training executed: %s | Î”CA â‰ˆ %d" % [training_id, ca_gain])
	else:
		var failure_reason: String = String(result.get("message", "í›ˆë ¨ì„ ì‹¤í–‰í•  ìˆ˜ ì—†ìŠµë‹ˆë‹¤"))
		push_warning("[TutorialScreen] Tutorial training failed: %s" % failure_reason)
		training_result = {"ca_gain": 0, "fatigue_cost": 0, "changes": {}, "message": failure_reason}

	_show_step(TutorialStep.TRAINING_RESULT)


func _execute_tutorial_match():
	"""Execute tutorial match (auto-simulate)"""
	print("[TutorialScreen] Executing tutorial match")

	# Tutorial uses a deterministic mock match result for onboarding.
	match_result = {
		"success": true,
		"result": "ìŠ¹ë¦¬",
		"final_score": [2, 1],
		"player_rating": 7.5,
		"highlights":
		[{"minute": 23, "event": "goal", "player": "ì£¼ì¸ê³µ"}, {"minute": 54, "event": "assist", "player": "ì£¼ì¸ê³µ"}]
	}

	print(
		(
			"[TutorialScreen] Mock match simulated: %s (%.1f rating)"
			% [match_result.get("result", "ìŠ¹ë¦¬"), match_result.get("player_rating", 7.5)]
		)
	)

	_show_step(TutorialStep.MATCH_RESULT)


func _finish_tutorial():
	"""Complete tutorial and save flag"""
	print("[TutorialScreen] Tutorial finished - saving completion flag")

	# Save tutorial_completed flag
	if has_node("/root/SaveManager"):
		var save_manager = get_node("/root/SaveManager")
		if save_manager.has_method("set_tutorial_completed"):
			save_manager.set_tutorial_completed(true)
			print("[TutorialScreen] Tutorial flag saved via SaveManager")
		else:
			# Fallback: Set global flag
			if has_node("/root/GameManager"):
				var game_manager = get_node("/root/GameManager")
				if "tutorial_completed" in game_manager:
					game_manager.tutorial_completed = true
					print("[TutorialScreen] Tutorial flag saved via GameManager")

	# Emit completion signal
	tutorial_completed.emit()

	# Transition to main game
	get_tree().change_scene_to_file("res://scenes/HomeImproved.tscn")


func _on_skip_pressed():
	"""Handle skip button press"""
	print("[TutorialScreen] Tutorial skipped by user")

	# Confirm skip
	var confirm_popup = AcceptDialog.new()
	confirm_popup.dialog_text = "íŠœí† ë¦¬ì–¼ì„ ê±´ë„ˆë›°ì‹œê² ìŠµë‹ˆê¹Œ?\n(ì–¸ì œë“ ì§€ ë‹¤ì‹œ ë³¼ ìˆ˜ ì—†ìŠµë‹ˆë‹¤)"
	confirm_popup.title = "ê±´ë„ˆë›°ê¸° í™•ì¸"
	confirm_popup.confirmed.connect(_finish_tutorial)
	call_deferred("add_child", confirm_popup)
	confirm_popup.popup_centered.call_deferred()
